# FinDoc-AI

./: .prettierrc.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.VSCodeCounter/2024-04-19_13-00-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
backend/: .env.dev  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  schema.py
backend/app/api/: api.py
backend/app/api/endpoints/: conversation.py  documents.py  generation.py  generator.py  metrics.py
backend/app/chat/: engine.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/documents/: download_sec_filings.py  file_utils.py  get_documents.py  upload_documents.py  upsert_db_sec_documents.py
backend/app/metrics/: fetch_metrics.py
backend/app/reports/: constants.py  engine.py
backend/app/supabase/: client.py
backend/app/utils/: contexts.py
backend/scripts/: download_sec_pdf.py  upsert_db_sec_documents.py  upsert_sec_into_pinecone.py
frontend/: .env.prod  .env.sentry-build-plugin  .eslintrc.json  .gitignore  Dockerfile  jest.config.ts  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
frontend/src/: store.ts
frontend/src/lib/: api.ts  (+4 more)
src/: store.ts
src/app/: layout.tsx  page.tsx
src/extensions/: extension-kit.ts
src/hooks/: useBlockEditor.ts
src/lib/: api.ts
src/styles/: index.css
supabase/: config.toml  seed.sql
supabase/migrations/: 20240314230316_create_vector_db.sql  20240402170008_reports.sql  20240418061830_create_reports_table.sql  20240418063213_remote_schema.sql  20240418063432_create_vector_table.sql  20240418065307_remote_schema.sql  20240420171621_remote_schema.sql  20240420185033_create_citations_table.sql  20240420192952_remote_schema.sql  20240420193815_remote_schema.sql  20240421034417_remote_schema.sql  20240422045754_remote_schema.sql  20240502172935_remote_schema.sql  20240502174816_create_citations_tables.sql  20240507092529_remote_schema.sql  20240507092722_add_cache_column.sql  20240508013042_add_constraint_on_delete_cascade.sql  20240516033500_create_settings_table.sql  20240519071344_remote_schema.sql  20240519072246_remote_schema.sql  20240519075335_remote_schema.sql  20240524030806_create_stocks_table.sql  20240525004422_create_template_customization_table.sql  20240607160423_alter_companies_table.sql  (+15 more)
(+349 files in other folders)
