[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Helen <helkochetkova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"
pypdf = "^4.1.0"
pdfkit = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
