[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Helen <helkochetkova@gmail.com>"]
readme = "README.md"
packages=[{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"
pypdf = "^4.1.0"
pdfkit = "^1.0.0"
llama-index-embeddings-voyageai = "^0.1.3"
pinecone-client = "^3.1.0"
llama-index-vector-stores-pinecone = "^0.1.4"
llama-index = "^0.10.19"
supabase = "^2.4.0"
llama-index-readers-file = "^0.1.11"
cachetools = "^5.3.3"
llama-index-vector-stores-supabase = "^0.1.3"
llama-index-llms-anthropic = "^0.1.6"
pydantic-settings = "^2.2.1"
vecs = "^0.4.3"
transformers = "^4.38.2"
llama-index-agent-openai = "^0.1.6"
llama-index-llms-openai = "^0.1.12"
anyio = "^4.3.0"
llama-index-llms-cohere = "^0.1.3"
sse-starlette = "^2.0.0"
financedatabase = "^2.2.2"
llama-index-postprocessor-cohere-rerank = "^0.1.2"
gunicorn = "^21.2.0"
email-validator = "^2.1.1"



[tool.poetry.group.dev.dependencies]
pdfkit = "^1.0.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
sseclient-py = "^1.8.0"
fire = "^0.6.0"
pytickersymbols = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"